Fixed img in prod.html when view on smaller screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -204,6 +204,13 @@ font-size: 150%;
   
   }
   
+  
+  /* Grid film */
+
+  .grid-container{
+    padding: 2rem;
+  }
+
   .film{
 
 
